--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             function doInit() {
                 gpsInit();
                 discInit();
+                compassInit();
             }
 
             function gpsInit() {
