--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>BLE Finder</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <style>
             body {
